added new odom tf publisher node

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,7 +44,10 @@ ament_python_install_package(${PROJECT_NAME})
 
 # install python scripts as python executables​, that others can run with:
 # ros2 run rallycar ...
-install(PROGRAMS scripts/rally_teleop_keyboard.py
+install(PROGRAMS
+  scripts/rally_teleop_keyboard.py
+  scripts/path_server.py
+  scripts/odom_tf_publisher.py
   DESTINATION lib/${PROJECT_NAME}
 )
 
