--- a/param/slam_toolbox_odomless.param.yaml
+++ b/param/slam_toolbox_odomless.param.yaml
@@ -1,6 +1,5 @@
-slam_toolbox:
+slam_node:
   ros__parameters:
-
     # Plugin params
     solver_plugin: solver_plugins::CeresSolver
     ceres_linear_solver: SPARSE_NORMAL_CHOLESKY
@@ -16,8 +15,9 @@ slam_toolbox:
     # as base_frame, to assume no instantaneous motion
     odom_frame: odom_scanmatch
     scan_topic: /scan
+    scan_queue_size: 40             # buffer up to 40 scans for tf filter lookup
     use_map_saver: true
-    mode: mapping #localization
+    mode: mapping                   # or localization
 
     # if you'd like to immediately start continuing a map at a given pose
     # or at the dock, but they are mutually exclusive, if pose is given
@@ -28,21 +28,21 @@ slam_toolbox:
 
     debug_logging: false
     throttle_scans: 1
-    transform_publish_period: 0.02 #if 0 never publishes odometry
-    map_update_interval: 5.0
+    transform_publish_period: 0.02  # if 0 never publishes odometry
+    map_update_interval: 2.0
     resolution: 0.05
-    max_laser_range: 10.0 #for rastering images
-    minimum_time_interval: 0.5
+    max_laser_range: 10.0           # for rastering images
+    minimum_time_interval: 0.1      # Not used in async mode. In sync mode, this downsamples the scan to 10Hz
     transform_timeout: 0.2
     tf_buffer_duration: 30.0
-    stack_size_to_use: 40000000 #// program needs a larger stack size to serialize large maps
+    stack_size_to_use: 40000000     # program needs a larger stack size to serialize large maps
     enable_interactive_mode: true
 
     # General Parameters
     use_scan_matching: true
     use_scan_barycenter: true
-    minimum_travel_distance: 0.5
-    minimum_travel_heading: 0.5
+    minimum_travel_distance: 0.     # unset this value as we are depending on scan-matching for odometry
+    minimum_travel_heading: 0.      # unset this value as we are depending on scan-matching for odometry
     scan_buffer_size: 10
     scan_buffer_maximum_scan_distance: 10.0
     link_match_minimum_response_fine: 0.1
