--- a/param/slam_toolbox_odomless.param.yaml
+++ b/param/slam_toolbox_odomless.param.yaml
@@ -15,7 +15,7 @@ slam_node:
     # as base_frame, to assume no instantaneous motion
     odom_frame: odom_scanmatch
     scan_topic: /scan
-    scan_queue_size: 40             # buffer up to 40 scans for tf filter lookup
+    scan_queue_size: 5              # buffer up to 5 scans for tf filter lookup
     use_map_saver: true
     mode: mapping                   # or localization
 
@@ -28,15 +28,15 @@ slam_node:
 
     debug_logging: false
     throttle_scans: 1
-    transform_publish_period: 0.02  # if 0 never publishes odometry
-    map_update_interval: 2.0
+    transform_publish_period: 0.025 # if 0 never publishes odometry
+    map_update_interval: 5.0
     resolution: 0.05
     max_laser_range: 10.0           # for rastering images
     minimum_time_interval: 0.1      # Not used in async mode. In sync mode, this downsamples the scan to 10Hz
-    transform_timeout: 0.2
+    transform_timeout: 0.5
     tf_buffer_duration: 30.0
     stack_size_to_use: 40000000     # program needs a larger stack size to serialize large maps
-    enable_interactive_mode: true
+    enable_interactive_mode: false
 
     # General Parameters
     use_scan_matching: true
@@ -71,6 +71,8 @@ slam_node:
     fine_search_angle_offset: 0.00349
     coarse_search_angle_offset: 0.349
     coarse_angle_resolution: 0.0349
-    minimum_angle_penalty: 0.9
-    minimum_distance_penalty: 0.5
+    # minimum_angle_penalty: 0.9
+    # minimum_distance_penalty: 0.5
+    minimum_angle_penalty: 0.55
+    minimum_distance_penalty: 0.3
     use_response_expansion: true
