--- a/param/slam_toolbox_odomless.param.yaml
+++ b/param/slam_toolbox_odomless.param.yaml
@@ -13,7 +13,7 @@ slam_node:
     base_frame: base_link
     # when no "wheel odometer" is provided, we set the odom_frame to be the same
     # as base_frame, to assume no instantaneous motion
-    odom_frame: odom_scanmatch
+    odom_frame: scanmatcher_frame
     scan_topic: /scan
     scan_queue_size: 5              # buffer up to 5 scans for tf filter lookup
     use_map_saver: true
@@ -40,7 +40,7 @@ slam_node:
 
     # General Parameters
     use_scan_matching: true
-    use_scan_barycenter: true
+    use_scan_barycenter: true       # false?
     minimum_travel_distance: 0.     # unset this value as we are depending on scan-matching for odometry
     minimum_travel_heading: 0.      # unset this value as we are depending on scan-matching for odometry
     scan_buffer_size: 10
@@ -56,7 +56,7 @@ slam_node:
 
     # Correlation Parameters - Correlation Parameters
     correlation_search_space_dimension: 0.5
-    correlation_search_space_resolution: 0.01
+    correlation_search_space_resolution: 0.02
     correlation_search_space_smear_deviation: 0.1
 
     # Correlation Parameters - Loop Closure Parameters
@@ -65,14 +65,12 @@ slam_node:
     loop_search_space_smear_deviation: 0.03
 
     # Scan Matcher Parameters
-    distance_variance_penalty: 0.5
-    angle_variance_penalty: 1.0
+    distance_variance_penalty: 0.125  # quartered this value as we are depending on scan-matching for odometry
+    angle_variance_penalty: 0.25      # quartered this value as we are depending on scan-matching for odometry
 
     fine_search_angle_offset: 0.00349
     coarse_search_angle_offset: 0.349
     coarse_angle_resolution: 0.0349
-    # minimum_angle_penalty: 0.9
-    # minimum_distance_penalty: 0.5
-    minimum_angle_penalty: 0.55
-    minimum_distance_penalty: 0.3
+    minimum_angle_penalty: 0.9
+    minimum_distance_penalty: 0.5
     use_response_expansion: true
