added new scripts that refactors localization stack with slam_toolbox. Debugged slam_toolbox launch issue

--- a/param/slam_toolbox_odomless.param.yaml
+++ b/param/slam_toolbox_odomless.param.yaml
@@ -56,7 +56,7 @@ slam_node:
 
     # Correlation Parameters - Correlation Parameters
     correlation_search_space_dimension: 0.5
-    correlation_search_space_resolution: 0.02
+    correlation_search_space_resolution: 0.01   # don't change this -- libkarto will be unhappy
     correlation_search_space_smear_deviation: 0.1
 
     # Correlation Parameters - Loop Closure Parameters
@@ -65,8 +65,8 @@ slam_node:
     loop_search_space_smear_deviation: 0.03
 
     # Scan Matcher Parameters
-    distance_variance_penalty: 0.125  # quartered this value as we are depending on scan-matching for odometry
-    angle_variance_penalty: 0.25      # quartered this value as we are depending on scan-matching for odometry
+    distance_variance_penalty: 2.   # 4x this value as we are depending on scan-matching for odometry
+    angle_variance_penalty: 4.      # 4x this value as we are depending on scan-matching for odometry
 
     fine_search_angle_offset: 0.00349
     coarse_search_angle_offset: 0.349
