added programmatic ros2 launch caller from rviz2

--- a/package.xml
+++ b/package.xml
@@ -19,6 +19,7 @@
   <depend>sensor_msgs</depend>
   <depend>nav_msgs</depend>
   <depend>rviz_common</depend>
+  <depend>rviz_default_plugins</depend>
   <depend>actionlib_msgs</depend>
 
   <build_depend>qtbase5-dev</build_depend>
